# HomeSentinel_-Experimental-Personal-Project-

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  CMakeLists_1.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  anomaly.c  anomaly.h  discovery.c  discovery.h  idf_component.yml  inventory.c  inventory.h  main.c  notifier.c  notifier.h  oui.c  oui.h  web.c  web.h  wifi.c  wifi.h
test/: run_all.sh  sample_oui.csv  test_anomaly.c  test_byteorder.c  test_inventory.c  test_json_escape.c  test_mdns_match.c  test_notify_dedup.c  test_oui.c  test_sweep.c
tools/: build_oui.py
web/: index.html
